logs/filegardener.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/filegardener-1.6.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './test_data'...
Compiling './test_data/__init__.py'...
Compiling './test_data/_collections.py'...
Compiling './test_data/_implementation.py'...
Compiling './test_data/adapters.py'...
Compiling './test_data/api.py'...
Compiling './test_data/appengine.py'...
Compiling './test_data/auth.py'...
Compiling './test_data/big5freq.py'...
Compiling './test_data/big5prober.py'...
Compiling './test_data/certs.py'...
Compiling './test_data/chardetect.py'...
Compiling './test_data/chardistribution.py'...
Compiling './test_data/charsetgroupprober.py'...
Compiling './test_data/charsetprober.py'...
Compiling './test_data/codingstatemachine.py'...
Compiling './test_data/compat.py'...
Compiling './test_data/conf.py'...
Compiling './test_data/conftest.py'...
Compiling './test_data/connection.py'...
Compiling './test_data/connectionpool.py'...
Compiling './test_data/constants.py'...
Compiling './test_data/cookies.py'...
Compiling './test_data/cp949prober.py'...
Compiling './test_data/escprober.py'...
Compiling './test_data/escsm.py'...
Compiling './test_data/eucjpprober.py'...
Compiling './test_data/euckrfreq.py'...
Compiling './test_data/euckrprober.py'...
Compiling './test_data/euctwfreq.py'...
Compiling './test_data/euctwprober.py'...
Compiling './test_data/exceptions.py'...
Compiling './test_data/fields.py'...
Compiling './test_data/filepost.py'...
Compiling './test_data/flask_theme_support.py'...
Compiling './test_data/gb2312freq.py'...
Compiling './test_data/gb2312prober.py'...
Compiling './test_data/hebrewprober.py'...
Compiling './test_data/hooks.py'...
Compiling './test_data/jisfreq.py'...
Compiling './test_data/jpcntx.py'...
Compiling './test_data/langbulgarianmodel.py'...
Compiling './test_data/langcyrillicmodel.py'...
Compiling './test_data/langgreekmodel.py'...
Compiling './test_data/langhebrewmodel.py'...
Compiling './test_data/langhungarianmodel.py'...
Compiling './test_data/langthaimodel.py'...
Compiling './test_data/latin1prober.py'...
Compiling './test_data/liten.py'...
***   File "./test_data/liten.py", line 170
    print "%s Print Mode" % MESSAGE
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './test_data/makefile.py'...
Compiling './test_data/mbcharsetprober.py'...
Compiling './test_data/mbcsgroupprober.py'...
Compiling './test_data/mbcssm.py'...
Compiling './test_data/models.py'...
Compiling './test_data/ntlmpool.py'...
Compiling './test_data/ordered_dict.py'...
Compiling './test_data/poolmanager.py'...
Compiling './test_data/pyopenssl.py'...
Compiling './test_data/request.py'...
Compiling './test_data/response.py'...
Compiling './test_data/retry.py'...
Compiling './test_data/sbcharsetprober.py'...
Compiling './test_data/sbcsgroupprober.py'...
Compiling './test_data/server.py'...
Compiling './test_data/sessions.py'...
Compiling './test_data/setup.py'...
Compiling './test_data/six.py'...
Compiling './test_data/sjisprober.py'...
Compiling './test_data/socks.py'...
Compiling './test_data/ssl_.py'...
Compiling './test_data/status_codes.py'...
Compiling './test_data/structures.py'...
Compiling './test_data/test_hooks.py'...
Compiling './test_data/test_liten.py'...
Compiling './test_data/test_lowlevel.py'...
Compiling './test_data/test_requests.py'...
Compiling './test_data/test_structures.py'...
Compiling './test_data/test_testserver.py'...
Compiling './test_data/test_utils.py'...
Compiling './test_data/timeout.py'...
Compiling './test_data/universaldetector.py'...
Compiling './test_data/url.py'...
Compiling './test_data/utf8prober.py'...
Compiling './test_data/utils.py'...
